<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    android:orientation="vertical"
    tools:context=".ui.HowCanProtectedActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/korunma" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/linecolor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/cardviewcolor">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/progressBar2"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_margin="10dp"
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/wearmask" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView6"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/ubuntu_medium"
                                    android:textColor="@color/textcolor"
                                    android:text="@string/title1"
                                    android:textSize="20sp" />

                                <TextView
                                    android:id="@+id/textView18"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:text="@string/description1" />
                            </LinearLayout>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/linecolor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/cardviewcolor">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/progressBar3"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_margin="10dp"
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/sosyalmesafe" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView7"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/ubuntu_medium"
                                    android:text="@string/title2"
                                    android:textColor="@color/textcolor"
                                    android:textSize="20sp" />

                                <TextView
                                    android:id="@+id/textView19"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:text="@string/description2" />
                            </LinearLayout>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/linecolor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/cardviewcolor">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/progressBar4"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_margin="10dp"
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/temizle" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView15"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/ubuntu_medium"
                                    android:text="@string/title3"
                                    android:textColor="@color/textcolor"
                                    android:textSize="20sp" />

                                <TextView
                                    android:id="@+id/textView20"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="5dp"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:text="@string/description3" />
                            </LinearLayout>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/linecolor" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/cardviewcolor">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/progressBar5"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_margin="10dp"
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/yika" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView16"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/ubuntu_medium"
                                    android:text="@string/title4"
                                    android:textColor="@color/textcolor"
                                    android:textSize="20sp" />

                                <TextView
                                    android:id="@+id/textView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:text="@string/description4" />
                            </LinearLayout>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/linecolor" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/cardviewcolor">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/progressBar6"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_margin="10dp"
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/evdekal" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="5dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/textView17"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/ubuntu_medium"
                                    android:text="@string/title5"
                                    android:textColor="@color/textcolor"
                                    android:textSize="20sp" />

                                <TextView
                                    android:id="@+id/textView21"
                                    android:layout_width="match_parent"
                                    android:gravity="center_vertical"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/description5" />
                            </LinearLayout>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>